--- a/templates/admin/add_coupon.html
+++ b/templates/admin/add_coupon.html
@@ -31,7 +31,7 @@
                             <div class="col-lg-12 col-sm-6 col-12" style="display: flex; flex-wrap: wrap; justify-content: space-between;">
                                 <div class="form-group col-lg-5 col-12">
                                     <label>Coupon Name</label>
-                                    <input type="text" name="name" pattern="[^\s]+" placeholder="Coupon Name">
+                                    <input type="text" name="code" pattern="[^\s]+" placeholder="Coupon Name">
                                 </div>
                                 <div class="form-group col-lg-5 col-12">
                                     <label>Percentage</label>
